--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+*.sqlite3
+vendor/bundle
+credentials.json
+cloud_sql_proxy
